5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1671_1104.log
== SUBMITION (2019-04-29 13:15:15) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a",", b)
	print("Intervalo 2: ", c",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.202486
-- ERROR:
  File "/home/codebench/codes/1671/1104/main.py", line 8
    print("Intervalo 1: ", a",", b)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:15:17) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a",", b)
	print("Intervalo 2: ", c",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.197711
-- ERROR:
  File "/home/codebench/codes/1671/1104/main.py", line 8
    print("Intervalo 1: ", a",", b)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:15:18) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a",", b)
	print("Intervalo 2: ", c",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.125181
-- ERROR:
  File "/home/codebench/codes/1671/1104/main.py", line 8
    print("Intervalo 1: ", a",", b)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:15:18) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a",", b)
	print("Intervalo 2: ", c",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.338008
-- ERROR:
  File "/home/codebench/codes/1671/1104/main.py", line 8
    print("Intervalo 1: ", a",", b)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:15:21) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a",", b)
		print("Intervalo 2: ", c",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a",", b)
	print("Intervalo 2: ", c",", d)
	print("Entradas invalidas")
-- ERROR:
File "XXXX", line 8
    print("Intervalo 1: ", a",", b)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:16:32) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.188239
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:16:32) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:16:33) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.144993
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:16:39) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:18:40) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a or c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (a >= c and a <= c or b >= d and b <= d):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.14904
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:18:41) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a or c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (a >= c and a <= c or b >= d and b <= d):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.1787
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:18:41) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a or c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (a >= c and a <= c or b >= d and b <= d):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:29:36) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a or c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (a >= c and a <= c or b >= d and b <= d):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:30:43) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a or c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (a >= c and a <= c or b >= d and b <= d):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:30:50) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a or c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (a >= c and a <= c or b >= d and b <= d):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:31:27) 
-- CODE:
a = float(input("Insira um valor: "))
b = float(input("Insira um valor: "))
c = float(input("Insira um valor: "))
d = float(input("Insira um valor: "))

if(b > a and d > c):
	if (c >= a and d <= a or c >= b and d <= b):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	elif (a >= c and a <= c or b >= d and b <= d):
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Ha intersecao")
	else:
		print("Intervalo 1: ", a, ",", b)
		print("Intervalo 2: ", c, ",", d)
		print("Nao ha intersecao")
else:
	print("Intervalo 1: ", a, ",", b)
	print("Intervalo 2: ", c, ",", d)
	print("Entradas invalidas")
-- EXECUTION TIME:
0.242061
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Nao ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Entradas invalidas
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
